Resolve some coding problem